# quant-research-lab

./: .coverage  .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
reports/: pca_eda.md  pca_summary.json
scripts/: bench_vectorization.py  make_returns.py
src/qrutils/: __init__.py  linalg.py  pca.py
tests/: test_linalg.py  test_pca.py
