[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-lab"
version = "0.1.0"
description = "Starter scaffold for quant research lab — Week 1"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "You"}]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.7",
    "black>=24.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.1",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# Let Black handle long lines; also ignore E203 (Black convention).
ignore = ["E203", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["qrutils"]
combine-as-imports = true


[tool.ruff.isort]
known-first-party = ["qrutils"]
combine-as-imports = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]
